Fix potion bubbles & recomment, finally I know what it does.